# plsn

./: .gitignore  AGENTS.md  README.md  learning.ipynb  main.ipynb  pyproject.toml  visualizations.ipynb
.agent/rules/: running-code.md
lattice_nets/: __init__.py  builder.py
lattice_nets/core/: __init__.py  network.py  neuron.py
lattice_nets/init/: __init__.py  connections.py  distributions.py  positions.py
plsn/: __init__.py  builder.py
plsn/core/: __init__.py  learning.py  network.py  neuron.py
plsn/init/: __init__.py  connections.py  positions.py
plsn/init/distributions/: __init__.py  distance.py  weight.py
tests/: test_activation.py  test_forward.py
