[project]
name = "plsn"
version = "0.1.0"
description = "Plastic Local Sparse Network - A modular neural network architecture with spatial connectivity"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
]
